# liot

./: Cargo.toml  main.rs
.cargo/: config.toml
.github/workflows/: ci.yml
esp32/: Cargo.toml  sdkconfig.defaults
esp32/src/: devices.rs  main.rs  services.rs  storage.rs  utils.rs
esp32/src/devices/: button_device.rs  dht11_device.rs  fan_device.rs  lcd_device.rs  light_device.rs  lock_device.rs  logic_device.rs  motion_sensor.rs  rfid_device.rs
esp32/src/services/: espnow_service.rs  mqtt_service.rs  noise_service.rs  wifi_service.rs
liot/: Cargo.toml
liot/tests/: noise_xx.rs
src/: controller.rs  data_schema.rs  device.rs  espnow.rs  http_service.rs  index.html  led.html  lib.rs  main.rs  mqtt.rs  noise.rs  storage.rs  utils.rs  wifi.rs
src/device/: pwm_device.rs  sensor_device.rs
src/noise/: cipherstate.rs  handshake.rs  symmetric.rs  transport.rs
tests/: noise_xx.rs
tests/vectors/: cacophony.txt  snow.txt
