[package]
name = "liot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2 = { version = "0.10.4", default-features = false }
blake3 = { version = "1.3.1", default-features = false }
chacha20poly1305 = { version = "0.10.0", default-features = false }
false = "0.0.0"
serde = "1.0.143"
x25519-dalek = { version = "2.0.0-pre.1", default-features = false, features = ["u32_backend"] }

[dev-dependencies]
hex = "0.4.3"
serde_derive = "1.0.143"
serde_json = "1.0.83"
