[package]
name = "liot"
version = "0.0.0"
authors = ["Phạm Văn Dũng <dung18j@gmail.com>"]
edition = "2021"
resolver = "2"


[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
embedded-hal = { version = "1.0.0-alpha.9" }
#embedded-hal-02 = { version = "0.2.7", package = "embedded-hal" }
esp-idf-hal = { version = "0.40.0" }
embedded-svc = { version = "0.23.1" }
esp-idf-svc = { version = "0.44.0", features = ["experimental", "embassy-time-driver"] }
esp-idf-sys = { version = "0.32.0", features = ["binstart"] }
anyhow = { version = "1" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
serde_qs = { version = "0.10.1" }
postcard = { version = "1.0.2", features = ["alloc"] }
minicbor = { version = "0.18.0" }
snow = { version = "0.9.0" }
x25519-dalek = { version = "2.0.0-pre.1", default-features = false, features = ["u32_backend"] }
async-executor = { version = "1.5.0" }
async-channel = { version = "1.7.1" }
async-mutex = { version = "1.4.0" }
futures-timer = { version = "3.0.2" }
futures-lite = { version = "1.12.0" }
waker-fn = { version = "1.1.0" }
spin_on = { version = "0.1.1" }
once_cell = { version = "1.16.0" }
dashmap = { version = "5.4.0", features = ["serde"] }
async-trait = { version = "0.1.59" }
httparse = { version = "1.8.0" }
http = { version = "0.2.8" }
base58 = { version = "0.2.0" }
event-listener = { version = "2.5.3" }

[build-dependencies]
embuild = "0.30"
anyhow = "1"
